[gd_scene load_steps=47 format=2]

[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_1/katana_weapon_fire_04.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_1/katana_weapon_fire_08.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_1/katana_weapon_fire_01.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_1/katana_weapon_fire_05.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_1/katana_weapon_fire_06.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_1/katana_weapon_fire_07.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_1/katana_weapon_fire_03.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_1/katana_weapon_fire_02.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_1/katana_weapon_fire_09.png" type="Texture" id=9]
[ext_resource path="res://scenes/player_weapon_fires/KatanaWeaponFire.gd" type="Script" id=10]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_2/katana_lvl2_03.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_2/katana_lvl2_05.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_2/katana_lvl2_06.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_2/katana_lvl2_02.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_2/katana_lvl2_08.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_2/katana_lvl2_09.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_2/katana_lvl2_04.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_2/katana_lvl2_01.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_2/katana_lvl2_07.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_3/katana_lvl3_05.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_3/katana_lvl3_08.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_3/katana_lvl3_09.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_3/katana_lvl3_07.png" type="Texture" id=23]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_3/katana_lvl3_06.png" type="Texture" id=24]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_3/katana_lvl3_03.png" type="Texture" id=25]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_3/katana_lvl3_04.png" type="Texture" id=26]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_3/katana_lvl3_02.png" type="Texture" id=27]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_3/katana_lvl3_01.png" type="Texture" id=28]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_4/katana_lv4_02.png" type="Texture" id=29]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_4/katana_lv4_05.png" type="Texture" id=30]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_4/katana_lv4_04.png" type="Texture" id=31]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_4/katana_lv4_03.png" type="Texture" id=32]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_4/katana_lv4_08.png" type="Texture" id=33]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_4/katana_lv4_09.png" type="Texture" id=34]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_4/katana_lv4_01.png" type="Texture" id=35]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_4/katana_lv4_06.png" type="Texture" id=36]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_4/katana_lv4_07.png" type="Texture" id=37]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_5/katana_level5_01.png" type="Texture" id=38]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_5/katana_level5_02.png" type="Texture" id=39]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_5/katana_level5_03.png" type="Texture" id=40]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_5/katana_level5_04.png" type="Texture" id=41]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_5/katana_level5_05.png" type="Texture" id=42]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_5/katana_level5_06.png" type="Texture" id=43]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_5/katana_level5_07.png" type="Texture" id=44]
[ext_resource path="res://assets/sprites/player_weapon_fires/katana/level_5/katana_level5_08.png" type="Texture" id=45]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 9 ) ],
"loop": true,
"name": "level1",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "level2",
"speed": 10.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 20 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "level3",
"speed": 10.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 29 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "level4",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ) ],
"loop": true,
"name": "level5",
"speed": 10.0
} ]

[node name="KatanaWeaponFire" type="Node2D"]
z_index = 9
script = ExtResource( 10 )
sprite_path = NodePath("AnimatedSprite")
weapon_area_path = NodePath("WeaponArea")

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.5, -19 )
frames = SubResource( 1 )
animation = "level5"

[node name="WeaponArea" type="Area2D" parent="."]
position = Vector2( -0.5, -19 )
collision_layer = 16
collision_mask = 4
monitorable = false

[node name="Level1" type="CollisionPolygon2D" parent="WeaponArea"]
polygon = PoolVector2Array( -9, -11, 45, -5, 67, 12, 33, 35, -12, 48, 42, 49, 91, 30, 96, 8, 57, -17 )
disabled = true

[node name="Level2" type="CollisionPolygon2D" parent="WeaponArea"]
polygon = PoolVector2Array( -9.5, -49, 50.5, -12, 68.5, 11, 56.5, 41, -9.5, 81, 34.5, 75, 85.5, 49, 96.5, 11, 85.5, -17, 49.5, -40 )
disabled = true

[node name="Level3" type="CollisionPolygon2D" parent="WeaponArea"]
polygon = PoolVector2Array( -35.5, -82, 32.5, -36, 54.5, 7, 44.5, 39, 11.5, 78, -36.5, 115, 58.5, 80, 108.5, 10, 60.5, -47 )
disabled = true

[node name="DisappearTween" type="Tween" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="WeaponArea" to="." method="_on_WeaponArea_body_entered"]
[connection signal="tween_all_completed" from="DisappearTween" to="." method="_on_DisappearTween_tween_all_completed"]
